tests/ui/const-generics/mgca/array-expr-complex.r2.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:14:21
   |
LL |     takes_array::<{ [X; 3] }>();
   |                     ^^^^^^

error: aborting due to 1 previous error

